--- a/calculadora.html
+++ b/calculadora.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Calculadora</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="js/calculadora.js"></script>
+  <link rel="stylesheet" href="css/calculadora.css">
 </head>
 <body>
-    
+<br>
+<br>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-sm-8 col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-header mt-3">
+            <h4>Calculadora</h4>
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="form-group mt-3">
+                <label for="num1">Número 1:</label>
+                <input type="number" class="form-control" id="num1">
+              </div>
+              <div class="form-group mt-3">
+                <label for="num2">Número 2:</label>
+                <input type="number" class="form-control" id="num2">
+              </div>
+              <div class="form-group">
+                <label for="operacion">Operación:</label>
+                <select class="form-control mt-3" id="operacion">
+                  <option selected>Seleccione : </option>
+                  <option value="+">Suma</option>
+                  <option value="-">Resta</option>
+                  <option value="*">Multiplicación</option>
+                  <option value="/">División</option>
+                </select>
+                <br>
+              </div>
+              <button type="button" class="btn btn-primary " onclick="calcular()">Calcular</button>
+            </form>
+            <div class="mt-5">
+              <h5>Resultado:</h5>
+              <p id="resultado"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+ 
+
 </body>
 </html>
