--- a/calculadora.html
+++ b/calculadora.html
@@ -28,9 +28,9 @@
                 <label for="num2">Número 2:</label>
                 <input type="number" class="form-control" id="num2">
               </div>
-              <div class="form-group">
+              <div class="form-group mt-3">
                 <label for="operacion">Operación:</label>
-                <select class="form-control mt-3" id="operacion">
+                <select class="form-control " id="operacion">
                   <option selected>Seleccione : </option>
                   <option value="+">Suma</option>
                   <option value="-">Resta</option>
